--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <!-- Itens de menu -->
-
-    <item
+<!--    <item
         android:id="@+id/action_settings"
         android:background="@color/white"
         android:icon="@drawable/outline_settings_24"
@@ -26,7 +25,13 @@
         android:icon="@drawable/baseline_logout_24"
         android:orderInCategory="300"
         android:title="Logout"
-        app:showAsAction="never" />
+        app:showAsAction="never" />-->
+
+    <item
+        android:id="@+id/action_more"
+        android:title="Settings"
+        android:icon="@drawable/baseline_more_vert_2_24"
+        app:showAsAction="always" />
 
 <!--    <item
         android:id="@+id/action_overflow"
